# socket-sentry

./: .gitignore  .hgignore  CHANGELOG  CMakeLists.txt  CPackConfig.cmake  FrequentlyAskedQuestions.md  GetSoftware.md  GuidedTour.md  IDEAS  INSTALL  ProjectHome.md  README  README.md  ReleaseChecklist.md  ScreenshotBanner.xcf  TODO  install.sh  news.xml  obs-staging.sh  package-ubuntu.sh
debian/: prerm
obs/: debian.changelog  debian.control  debian.postinst  socketsentry.dsc  socketsentry_basic.spec
rpm/: obs-opensuse-base.spec
socketsentry-plasma-engine/: CMakeLists.txt  socksent-plasma-engine.desktop  socksent-plasma-engine.desktop.in
socketsentry-plasma-engine/src/: SocketSentryDataEngine.cpp  SocketSentryDataEngine.h
socketsentry-plasma-widget/: CMakeLists.txt  socksent-plasma-widget.desktop  socksent-plasma-widget.desktop.in
socketsentry-plasma-widget/img/: CMakeLists.txt  hisc-app-socketsentry.svgz  hisc-app-socketsentry_quiet.svgz  hisc-app-socketsentry_receiving.svgz  hisc-app-socketsentry_sending.svgz  hisc-app-socketsentry_sendingreceiving.svgz
socketsentry-plasma-widget/src/: AppletConfiguration.cpp  AppletConfiguration.h  AppletConfigurationData.cpp  AppletConfigurationData.h  ColumnListWidgetItem.cpp  ColumnListWidgetItem.h  CommunicationFlowItem.cpp  CommunicationFlowItem.h  CommunicationFlowItemData.cpp  CommunicationFlowItemData.h  CommunicationFlowItemKey.cpp  CommunicationFlowItemKey.h  CommunicationFlowItemKeyData.cpp  CommunicationFlowItemKeyData.h  CommunicationFlowSortFilterProxyModel.cpp  CommunicationFlowSortFilterProxyModel.h  CommunicationFlowTableModel.cpp  CommunicationFlowTableModel.h  CommunicationFlowTableView.cpp  CommunicationFlowTableView.h  ErrorWidget.cpp  ErrorWidget.h  GlobalSettings.ui  GlobalSettingsUi.cpp  GlobalSettingsUi.h  LocalSettings.ui  LocalSettingsUi.cpp  LocalSettingsUi.h  NetworkDeviceWidget.cpp  NetworkDeviceWidget.h  SocketSentryApplet.cpp  SocketSentryApplet.h
socketsentry-service/: CMakeLists.txt  org.socketsentry.Watcher.conf  org.socketsentry.Watcher.service.in
socketsentry-service/src/: CommonTypes.h  CommunicationFlow.cpp  CommunicationFlow.h  CommunicationFlowData.cpp  CommunicationFlowData.h  ConnectionProcessCorrelator.cpp  ConnectionProcessCorrelator.h  CookedPacketDecoder.cpp  CookedPacketDecoder.h  DataLinkPacketDecoder.cpp  DataLinkPacketDecoder.h  DateTimeUtils.cpp  DateTimeUtils.h  EthernetPacketDecoder.cpp  EthernetPacketDecoder.h  FlowMetrics.cpp  FlowMetrics.h  FlowMetricsData.cpp  FlowMetricsData.h  FlowStatistics.cpp  FlowStatistics.h  FlowStatisticsData.cpp  FlowStatisticsData.h  HostAddressUtils.cpp  HostAddressUtils.h  HostNameResolver.cpp  HostNameResolver.h  IConnectionProcessCorrelator.h  IPcapManager.h  IPcapThread.h  InternetProtocolDecoder.cpp  InternetProtocolDecoder.h  IpEndpointPair.cpp  IpEndpointPair.h  IpEndpointPairData.cpp  IpEndpointPairData.h  Latch.cpp  Latch.h  LogSettings.cpp  LogSettings.h  (+26 more)
socketsentry-service/src/tcpdump-includes/: ether.h
socketsentry-service/test/: CookedPacketDecoderTest.cpp  CookedPacketDecoderTest.h  EthernetPacketDecoderTest.cpp  EthernetPacketDecoderTest.h  HostAddressUtilsTest.cpp  HostAddressUtilsTest.h  HostNameCachingTest.cpp  HostNameCachingTest.h  HostNameResolverTest.cpp  HostNameResolverTest.h  InternetProtocolDecoderTest.cpp  InternetProtocolDecoderTest.h  MockConnectionProcessCorrelator.h  MockPcapManager.h  MockPcapThread.h  NetworkHistoryTest.cpp  NetworkHistoryTest.h  PcapManagerTest.cpp  PcapManagerTest.h  TestMain.h  UserNameResolverTest.cpp  UserNameResolverTest.h  WatcherTest.cpp  WatcherTest.h
